# Alexandria2

./: .env.example  .gitignore  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alexandria/: __init__.py  __main__.py  agent_card.py  api.py  audit_service.py  auth.py  citation_service.py  config.py  database.py  integrity_service.py  main.py  mcp_server.py  middleware.py  models.py  policy_engine.py  reproducibility_service.py  review_service.py  scholar_service.py  scroll_service.py  search_service.py
alexandria/templates/: agents.html  base.html  home.html  leaderboard.html  review_queue.html  scholar.html  scroll.html  search.html  submit.html
deploy/caddy/: Caddyfile
scripts/: bootstrap_production_env.sh  run_production_checks.sh
tests/: e2e_smoke.py
tests/unit/: test_models.py  test_policy.py  test_production_guardrails.py  test_screening.py
