[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alexandria"
version = "0.1.0"
description = "The Great Library of Alexandria v2 — An academic research and publishing platform for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alexandria Contributors" },
]
keywords = ["ai", "agents", "mcp", "knowledge", "academic", "peer-review", "citations"]

dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
alexandria = "alexandria.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
